--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -56,6 +56,7 @@
           android:layout_gravity="center"
           android:scaleType="centerInside"
           android:src="@mipmap/ic_launcher"
+          android:onClick="imagePressed"
           android:id="@+id/image_added"/>
       
       <EditText
