--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -23,22 +23,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:elevation="12dp"
-                android:id="@+id/cardview1"
-                app:cardCornerRadius="40dp"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="5dp">
-
-                <ImageView
-                    android:layout_height="40dp"
-                    android:layout_width="match_parent"
-                    android:id="@+id/image_profile"
-                    android:scaleType="centerCrop"/>
-
-            </androidx.cardview.widget.CardView>
+                android:id="@+id/image_profile"
+                android:layout_margin="5dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
