--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -86,21 +86,149 @@
             android:layout_height="wrap_content"
             android:id="@+id/fullname"
             android:hint="Full name"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="0dp"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/username"
             android:hint="Username"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="10dp" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bio"
             android:hint="Bio"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Change Welcome Voice"
+                android:layout_gravity="center"
+                android:id="@+id/change_audio"
+                android:textColor="@color/primary_dark_color"
+                android:textSize="18sp"
+                android:layout_marginBottom="10dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:padding="0dp">
+
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:text="Male"
+                    android:id="@+id/male"
+                    android:onClick="onClickChangeAudio"
+                    android:textSize="15sp"
+                    android:layout_marginRight="30dp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:onClick="onClickButtonMaleTry"
+                    android:text="Try"
+                    android:id="@+id/male_try"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:padding="0dp">
+
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:text="Female"
+                    android:id="@+id/female"
+                    android:onClick="onClickChangeAudio"
+                    android:textSize="15sp"
+                    android:layout_marginRight="30dp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:onClick="onClickButtonFemaleTry"
+                    android:text="Try"
+                    android:id="@+id/female_try"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:padding="0dp">
+
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:text="Fantasy"
+                    android:id="@+id/fantasy"
+                    android:onClick="onClickChangeAudio"
+                    android:textSize="15sp"
+                    android:layout_marginRight="30dp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:onClick="onClickButtonFanatasyTry"
+                    android:text="Try"
+                    android:id="@+id/fantasy_try"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:padding="0dp">
+
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:text="Haunted"
+                    android:id="@+id/haunted"
+                    android:onClick="onClickChangeAudio"
+                    android:textSize="15sp"
+                    android:layout_marginRight="30dp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:onClick="onClickButtonHauntedTry"
+                    android:text="Try"
+                    android:id="@+id/haunted_try"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/red"
+                android:text="REMOVE VOICE"
+                android:onClick="onClickChangeAudio"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/remove"
+                android:textSize="15sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
