Commented stuff and finalized everything

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,13 +31,6 @@
                     android:id="@+id/username"
                     android:textColor="@color/primary_dark_color"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/options"
-                    android:src="@drawable/ic_options"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="15dp"/>
 
             </RelativeLayout>
 
@@ -168,6 +161,8 @@
                         android:layout_marginTop="10dp"
                         android:text="EDIT PROFILE"
                         android:textSize="10dp"
+                        android:backgroundTint="@color/pinkish_red"
+                        android:textColor="@color/blackish"
                         android:id="@+id/edit_profile"/>
 
                 </LinearLayout>
