--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -5,14 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_more"
-        android:layout_margin="15dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,20 +16,20 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_profile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:id="@+id/image_profile"
-                android:layout_margin="5dp"/>
+                android:layout_margin="5dp" />
 
             <TextView
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/username"
                 android:layout_gravity="center_vertical"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                android:layout_margin="5dp"
                 android:textColor="@color/primary_dark_color"
-                android:layout_margin="5dp"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -46,11 +38,11 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/post_image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="1:1"
-                 android:id="@+id/post_image"
-                tools:ignore="MissingConstraints"/>
+                tools:ignore="MissingConstraints" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -63,7 +55,7 @@
                 android:id="@+id/like_but"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_like"/>
+                android:src="@drawable/ic_like" />
 
             <ImageView
                 android:id="@+id/share"
@@ -77,8 +69,8 @@
                 android:id="@+id/save"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_save"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_save" />
 
         </RelativeLayout>
 
@@ -87,34 +79,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:textColor="@color/accent_color"/>
+            android:textColor="@color/accent_color"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:textColor="@color/primary_dark_color"/>
+            android:textColor="@color/primary_dark_color"
+            android:textSize="14dp"
+            android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="@color/accent_color"/>
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/blackish" />
 
         <TextView
-            android:id="@+id/total_comments"
+            android:id="@+id/random"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="@color/accent_color"/>
+            android:layout_marginTop="5dp" />
+
 
     </LinearLayout>
 
