--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -36,7 +36,7 @@
 
     </LinearLayout>
 
-    <Button
+    <android.widget.Button
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:background="@drawable/button_background"
